--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,12 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ./
-        env:
-          GITHUB_WORKSPACE: ./testdata
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-check
           level: info
+          path: ./testdata
 
   test-pr-check:
     if: github.event_name == 'pull_request'
@@ -25,12 +24,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ./
-        env:
-          GITHUB_WORKSPACE: ./testdata
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-check
-          level: error
+          level: warning
+          path: ./testdata
 
   test-pr-review:
     if: github.event_name == 'pull_request'
@@ -39,9 +37,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ./
-        env:
-          GITHUB_WORKSPACE: ./testdata
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
-          level: error
+          level: warning
+          path: ./testdata
